// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputTextExtended renders int text multiline correctly 1`] = `
<div
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField ms-TextField--multiline root-47"
      >
        <div
          class="ms-TextField-wrapper wrapper-48"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-56"
          >
            <textarea
              aria-invalid="false"
              class="ms-TextField-field field-57"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
            >
              This value was pre-filled
            </textarea>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputTextExtended renders int text single line correctly 1`] = `
<div
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField root-47"
      >
        <div
          class="ms-TextField-wrapper wrapper-48"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-49"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-50"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
              value="This value was pre-filled"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputTextExtended renders text box with inline action correctly 1`] = `
<div
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField root-47"
      >
        <div
          class="ms-TextField-wrapper wrapper-48"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-49"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-50"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
              value="This value was pre-filled"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
